Complete registration rules and unit tests for US-13